--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
