--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.dualcores.swagpoints:swagpoints:1.0.2'
     compile 'com.github.blackfizz:eazegraph:1.2.2@aar'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
